cv en construction...

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<head>
+  <title>Mon CV</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="infos">
+    Jawad ZAILACHI <br />
+    26 ans <br/>
+    Rue de Locht, 16<br />
+    1030 Bruxelles<br />
+    0489/112/430<br />
+    zailachi.jawad@gmail.com<br />
+    Permis B<br />
+  </div>
+  <div class="img">
+    <img src="https://cdn.pixabay.com/photo/2016/03/03/23/19/cat-1235232_960_720.jpg"height="200px" width="200px"/>
+  </div>
+<h1>Curriculum Vitae</h1>
+<h3>Formations</h3>
+  <div class="sec gauche">
+    <p>2003-2009</p>
+    <p>2009-2011</p>
+</div>
+<div class="sec gauche">
+    <p>Enseignement secondaire option sciences-math, Cess obtenu</p>
+    <p>Sciences industrielles à l'Ecam</p>
+</div>
+<h3>Experiences professionnelles</h3>
+  <div class="sec gauche">
+    <p>Mars 2016-Juin 2017</p>
+    <p>Août 2012-Janvier 2016</p>
+    <p>Septembre 2011-Mars 2012</p>
+  </div>
+  <div class ="sec droite">
+    <p>Chauffeur de taxi, <span>Eagle Express</span></p>
+    <p>Agent commercial, <span>STIB</span></p>
+    <p>Gérant, <span>Auto Loc.</span></p>
+  </div>
+<h4>Jobs étudiants</h4>
 
+
+
+
+
+
+
+
+</body>
